Fixed the clear button (stopgap fix though)

--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,11 @@ body {
   gap: 2px;
   background-color: white;
 }
+
+.grid-container-retract {
+  grid-column: 2 / 5;
+  grid-row: 2 / 5;
+  display: grid;
+  gap: 2px;
+  background-color: white;
+}
